<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sschakraborty.platform.kjudge</groupId>
    <artifactId>kjudge</artifactId>
    <packaging>pom</packaging>
    <version>0.0.1-SNAPSHOT</version>
    <name>KJudge</name>
    <description>KJudge Project</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mvn-compiler-plugin.version>3.8.1</mvn-compiler-plugin.version>
        <hibernate.version>5.4.14.Final</hibernate.version>
        <junit.version>4.13</junit.version>
    </properties>

    <modules>
        <module>KJudge-data</module>
        <module>KJudge-error</module>
        <module>KJudge-core</module>
        <module>KJudge-shared</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${mvn-compiler-plugin.version}</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>